syntax = "proto3";
package pbChat;//The package name to which the proto file belongs
option go_package = "./chat;pbChat";//The generated go pb file is in the current directory, and the package name is pbChat

// 客户端发送消息, 服务端返回消息, 处理消息都是这个消息体.
// 重复使用, 字段不需要可以暂时不填充
message MsgFormat {
  int32 ChatType = 1; // 聊天类型(单聊, 群聊)
  string SendID = 2; // 发送方
  string RecvID = 3; // 接收方
  string GroupID = 4; // 群组号
  int64 SendTime  = 5; // 发送时间
  int64 Sequence = 6; // 序列号
  int32 ContentType = 7; // 消息类型
  bytes Content = 8; // 消息体
}

message MsgFormatList {
  repeated MsgFormat MsgFormats = 1;
}

// Websocket 连接通用请求消息, 具体消息填充到 Data 字段
message WSRequest {
  int32 Action = 1;
  string Token = 2;
  bytes Data = 3; 
}

// 需要填充到 WSRequest 的 Data 字段
// 根据序列号范围拉取消息
message PullMsgBySeqRangeRequest {
  int64 SeqBegin = 1;
  int64 SeqEnd = 2;
}

// 需要填充到 WSRequest 的 Data 字段
// 根据序列号列表拉取消息
message PullMsgBySeqListRequest {
  repeated int64 SeqList = 1;
}

// 需要填充到 WSRequest 的 Data 字段
// 获取用户最新序列号
message GetUserMaxSeqRequest {
}

// 需要填充到 WSRequest 的 Data 字段
// 客户端向服务端发送消息
message PushMsgRequest {
  MsgFormat MsgFormat = 1;
}

// Websocket 连接通用返回消息, 具体消息填充到 Data 字段
message WSResponse {
  int32 Action = 1;
  int32 ErrorCode = 2;
  string ErrorMsg = 3;
  bytes Data = 4;
}

// 填充到 WSResponse 的 Data 字段
// 根据序列号范围拉取消息
message PullMsgBySeqRangeResponse {
  repeated MsgFormat MsgFormats = 1;
}

// 填充到 WSResponse 的 Data 字段
// 根据序列号列表拉取消息
message PullMsgBySeqListResponse {
  repeated MsgFormat MsgFormats = 1;
}

// 填充到 WSResponse 的 Data 字段
// 获取用户最大序列号
message GetUserMaxSeqResponse {
  int64 Seq = 1; 
}

// 填充到 WSResponse 的 Data 字段
// 客户端向服务端发送消息
message PushMsgResponse {
  bool Succeed = 1;
}